style and colors of Material Design

--- a/src/messenger-app/messenger-app.html
+++ b/src/messenger-app/messenger-app.html
@@ -15,6 +15,12 @@
       :host {
         display: block;
       }
+      messenger-login {
+        width: 100%;
+        max-width: 400px;
+        background-color: #eee;
+        padding: 1em;
+      }
     </style>
     <messenger-login></messenger-login>
   </template>
