--- a/src/messenger-elements/messenger-login.html
+++ b/src/messenger-elements/messenger-login.html
@@ -8,6 +8,11 @@
       :host {
         display: block;
       }
+      paper-button {
+        color: white;
+        margin: 1em 0 0 0;
+        background-color: var(--accent-color);
+      }
     </style>
     <paper-input label="Correo electrónico" type="email" required="true"></paper-input>
     <paper-input label="Contraseña" type="password" required="true"></paper-input>
