--- a/src/messenger-app/messenger-app.html
+++ b/src/messenger-app/messenger-app.html
@@ -1,7 +1,9 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/polymerfire/firebase.html">
 <link rel="import" href="../../bower_components/polymerfire/firebase-app.html">
+<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../messenger-elements/messenger-login.html">
+<link rel="import" href="../messenger-elements/messenger-home.html">
 
 <dom-module id="messenger-app">
   <template>
@@ -12,18 +14,25 @@
       storage-bucket="messenger-facilito-a3d55.appspot.com"
       messaging-sender-id="868503103247">
     </firebase-app>
-    <style>
+    <style include="iron-flex iron-flex-alignment">
       :host {
         display: block;
       }
       messenger-login {
-        width: 100%;
-        max-width: 400px;
         background-color: #eee;
         padding: 1em;
+        width: 100%;
+      }
+      #contenedor {
+        height: 100vh;
+        width: 100%;
+        max-width: 400px;
       }
     </style>
-    <messenger-login></messenger-login>
+    <div id="contenedor" class="layout horizontal">
+      <messenger-login></messenger-login>
+      <messenger-home></messenger-home>
+    </div>
   </template>
 
   <script>
