change from login to home

--- a/src/messenger-app/messenger-app.html
+++ b/src/messenger-app/messenger-app.html
@@ -28,10 +28,13 @@
         width: 100%;
         max-width: 400px;
       }
+      .oculto {
+        display: none;
+      }
     </style>
     <div id="contenedor" class="layout horizontal">
-      <messenger-login user="{{user}}" on-login="authenticate"></messenger-login>
-      <messenger-home></messenger-home>
+      <messenger-login id="login" user="{{user}}" on-login="authenticate"></messenger-login>
+      <messenger-home id="home" class="oculto"></messenger-home>
     </div>
   </template>
 
@@ -47,7 +50,9 @@
       },
 
       authenticate: function(ev) {
-        console.log('Se logueo');
+        console.log('Soy app y recibi un cambio en el login');
+        this.$.login.classList.add('oculto');
+        this.$.home.classList.remove('oculto');
       }
     });
   </script>
