--- a/src/messenger-elements/messenger-home.html
+++ b/src/messenger-elements/messenger-home.html
@@ -5,13 +5,22 @@
     <style>
       :host {
         display: block;
+        width: 100%;
+        text-align: center;
+      }
+      header {
+        background-color: var(--paper-indigo-200);
+        padding: 1em;
       }
     </style>
+    <header>
+      <img src="http://i.ytimg.com/vi/EfwPqRYNgaE/hqdefault.jpg" height="150" alt="avatar" />
+    </header>
   </template>
   <script>
     Polymer({
       is: "messenger-home",
-      
+
     });
   </script>
 </dom-module>
