--- a/src/messenger-elements/messenger-home.html
+++ b/src/messenger-elements/messenger-home.html
@@ -1,10 +1,13 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/neon-animation/neon-animation-runner-behavior.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/scale-up-animation.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/scale-down-animation.html">
 
 <dom-module id="messenger-home">
   <template>
     <style>
       :host {
-        display: block;
+        display: none;
         width: 100%;
         text-align: center;
       }
@@ -21,6 +24,54 @@
     Polymer({
       is: "messenger-home",
 
+      behaviors: [
+        Polymer.NeonAnimationRunnerBehavior
+      ],
+
+      properties: {
+        opened: {
+          type: Boolean,
+          value: false
+        },
+        animationConfig: {
+          value: function() {
+            return {
+              entry: [{
+                name: 'scale-up-animation',
+                id: 'scale-up-animation',
+                node: this
+              }],
+              exit: [{
+                name: 'scale-down-animation',
+                node: this
+              }]
+            }
+          }
+        }
+      },
+
+      listeners: {
+        'neon-animation-finish': '_animationFinished'
+      },
+
+      ready: function() {
+        this.hide();
+      },
+
+      hide: function() {
+        this.opened = false;
+        this.playAnimation('exit');
+      },
+
+      show: function() {
+        this.opened = true;
+        this.style.display = 'block';
+        this.playAnimation('entry');
+      },
+
+      _animationFinished: function() {
+        if (!this.opened) this.style.display = 'none';
+      }
     });
   </script>
 </dom-module>
