--- a/src/messenger-elements/messenger-login.html
+++ b/src/messenger-elements/messenger-login.html
@@ -4,12 +4,15 @@
 <link rel="import" href="../../bower_components/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="../../bower_components/iron-form/iron-form.html">
 <link rel="import" href="../../bower_components/polymerfire/firebase-auth.html">
+<link rel="import" href="../../bower_components/neon-animation/neon-animation-runner-behavior.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/scale-up-animation.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/scale-down-animation.html">
 
 <dom-module id="messenger-login">
   <template>
     <style>
       :host {
-        display: block;
+        display: none;
       }
       paper-button {
         color: white;
@@ -36,13 +39,41 @@
         email: String,
         password: String,
         signUp: Boolean,
-        user: Object
+        user: Object,
+        opened: {
+          type: Boolean,
+          value: false
+        },
+        animationConfig: {
+          value: function() {
+            return {
+              entry: [{
+                name: 'scale-up-animation',
+                id: 'scale-up-animation',
+                node: this
+              }],
+              exit: [{
+                name: 'scale-down-animation',
+                node: this
+              }]
+            }
+          }
+        }
+      },
+
+      behaviors: [
+        Polymer.NeonAnimationRunnerBehavior
+      ],
+
+      listeners: {
+        'neon-animation-finish': '_animationFinished'
       },
 
       ready: function() {
         this.$.auth.signOut();
         this.$.button.addEventListener('click', () => this.sendForm());
         this.$.auth.auth.onAuthStateChanged((usr) => this.handleAuth(usr));
+        this.show();
       },
 
       sendForm: function() {
@@ -79,6 +110,21 @@
         } else {
           this.fire('logout');
         }
+      },
+
+      hide: function() {
+        this.opened = false;
+        this.playAnimation('exit');
+      },
+
+      show: function() {
+        this.opened = true;
+        this.style.display = 'block';
+        this.playAnimation('entry');
+      },
+
+      _animationFinished: function() {
+        if (!this.opened) this.style.display = 'none';
       }
     });
   </script>
