--- a/src/messenger-app/messenger-app.html
+++ b/src/messenger-app/messenger-app.html
@@ -33,7 +33,7 @@
       }
     </style>
     <div id="contenedor" class="layout horizontal">
-      <messenger-login id="login" user="{{user}}" on-login="authenticate"></messenger-login>
+      <messenger-login id="login" user="{{user}}" on-login="authenticate" on-logout="signOut"></messenger-login>
       <messenger-home id="home" ></messenger-home>
     </div>
   </template>
@@ -53,6 +53,11 @@
         console.log('Soy app y recibi un cambio en el login');
         this.$.login.hide();
         this.$.home.show();
+      },
+
+      signOut: function() {
+        this.$.home.hide();
+        this.$.login.show();
       }
     });
   </script>
