--- a/src/messenger-elements/messenger-login.html
+++ b/src/messenger-elements/messenger-login.html
@@ -108,6 +108,7 @@
         if (user) {
           this.fire('login');
         } else {
+          console.log('Cerré sesión');
           this.fire('logout');
         }
       },
