--- a/src/messenger-elements/messenger-home.html
+++ b/src/messenger-elements/messenger-home.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../../bower_components/neon-animation/neon-animation-runner-behavior.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/scale-down-animation.html">
+<link rel="import" href="./messenger-settings-menu.html">
 
 <dom-module id="messenger-home">
   <template>
@@ -19,6 +20,7 @@
     <header>
       <img src="http://i.ytimg.com/vi/EfwPqRYNgaE/hqdefault.jpg" height="150" alt="avatar" />
     </header>
+    <messenger-settings-menu></messenger-settings-menu>
   </template>
   <script>
     Polymer({
