--- a/src/messenger-elements/messenger-home.html
+++ b/src/messenger-elements/messenger-home.html
@@ -11,10 +11,17 @@
         display: none;
         width: 100%;
         text-align: center;
+        position: relative;
       }
       header {
         background-color: var(--paper-indigo-200);
         padding: 1em;
+      }
+      messenger-settings-menu {
+        position: absolute;
+        top: 1em;
+        right: 1em;
+        color: white;
       }
     </style>
     <header>
