--- a/src/messenger-elements/messenger-settings-menu.html
+++ b/src/messenger-elements/messenger-settings-menu.html
@@ -1,5 +1,10 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/polymerfire/firebase-auth.html">
+<link rel="import" href="../../bower_components/paper-menu-button/paper-menu-button.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/paper-item/paper-item.html">
 
 <dom-module id="messenger-settings-menu">
   <template>
@@ -7,9 +12,19 @@
       :host {
         display: block;
       }
+      paper-item {
+        cursor: pointer;
+        color: black;
+      }
     </style>
     <firebase-auth id="auth" user="{{user}}"></firebase-auth>
-    <button id="logout">Cerrar sesión</button>
+    <paper-menu-button>
+      <paper-icon-button icon="menu" class="dropdown-trigger"></paper-icon-button>
+      <paper-menu class="dropdown-content">
+        <paper-item>Configuración</paper-item>
+        <paper-item id="logout">Cerrar sesión</paper-item>
+      </paper-menu>
+    </paper-menu-button>
   </template>
 
   <script>
