--- a/src/messenger-elements/messenger-home.html
+++ b/src/messenger-elements/messenger-home.html
@@ -3,6 +3,7 @@
 <link rel="import" href="../../bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/scale-down-animation.html">
 <link rel="import" href="./messenger-settings-menu.html">
+<link rel="import" href="./messenger-connected-users.html">
 
 <dom-module id="messenger-home">
   <template>
@@ -28,6 +29,7 @@
       <img src="http://i.ytimg.com/vi/EfwPqRYNgaE/hqdefault.jpg" height="150" alt="avatar" />
     </header>
     <messenger-settings-menu></messenger-settings-menu>
+    <messenger-connected-users></messenger-connected-users>
   </template>
   <script>
     Polymer({
