--- a/room.html
+++ b/room.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-    <title>MSN Web Chat</title>
+    <title>MSN Conversation</title>
     <meta name="description" content="messenger description">
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="/src/messenger-app/messenger-app.html">
+    <link rel="import" href="/src/messenger-app/messenger-room.html">
   </head>
   <body>
-    <messenger-app></messenger-app>
+    <messenger-room></messenger-room>
   </body>
 </html>
