--- a/src/behaviors/login-behavior.html
+++ b/src/behaviors/login-behavior.html
@@ -8,12 +8,12 @@
 
     _hideLoginWindow: function() {
       this.$.login.hide();
-      // this.$.home.show();
+      if (this.$.home) this.$.home.show();
     },
 
     _showLoginWindow: function() {
       this.$.login.show();
-      // this.$.home.hide();
+      if (this.$.home) this.$.home.hide();
     }
   };
 </script>
