add username in message

--- a/src/messenger-app/messenger-room.html
+++ b/src/messenger-app/messenger-room.html
@@ -27,6 +27,9 @@
       #messages, #form {
         max-width: 80%;
       }
+      #form {
+        margin-top: 1em;
+      }
       .avatar {
         max-width: 18%;
         margin-left: 2%;
