--- a/src/messenger-elements/messenger-form.html
+++ b/src/messenger-elements/messenger-form.html
@@ -19,6 +19,9 @@
         color: white;
         margin: 1em;
       }
+      form {
+        background-color: white;
+      }
     </style>
     <form is="iron-form" class="layout horizontal" id="form">
       <paper-textarea value="{{message}}" label="Escribe tu mensaje aquí..." rows="5" id="textarea"></paper-textarea>
