--- a/src/messenger-elements/messenger-messages.html
+++ b/src/messenger-elements/messenger-messages.html
@@ -6,6 +6,9 @@
     <style>
       :host {
         display: block;
+        height: 50vh;
+        overflow-y: scroll;
+        background-color: white;
       }
     </style>
     <template is="dom-repeat" id="messagesEl" items="{{messages}}" as="message">
