--- a/src/messenger-elements/messenger-message.html
+++ b/src/messenger-elements/messenger-message.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="./messenger-user.html">
 
 <dom-module id="messenger-message">
   <template>
@@ -6,15 +7,41 @@
       :host {
         display: block;
       }
+      .bubble {
+        width: 50%;
+        margin-top: 0.5em;
+        margin-left: 1em;
+        background-color: var(--paper-indigo-200);
+        padding: 10px 15px;
+        position: relative;
+      }
+      .bubble:after {
+        content: " ";
+        border: solid transparent;
+        top: 50%;
+        right: 100%;
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-color: rgba(0, 0, 0, 0);
+        border-right-color: var(--paper-indigo-200);
+        border-width: 10px;
+        margin-top: -10px;
+      }
     </style>
-    <p>{{message.body}}</p>
+    <messenger-user uid="{{message.user}}" user="{{user}}"></messenger-user>
+    <div class="bubble">
+      <b>{{user.name}}: </b>
+      {{message.body}}
+    </div>
   </template>
 
   <script>
     Polymer({
       is: "messenger-message",
       properties: {
-        message: Object
+        message: Object,
+        user: Object
       }
     });
   </script>
